bpo-21222: Fix improperly merged change so that final hooks are called before types are cleared